--- a/data/config/DynamicLights_entityClasses.cfg
+++ b/data/config/DynamicLights_entityClasses.cfg
@@ -42,6 +42,7 @@ general {
     I:EntityGaiaNaga=0
     I:EntityGaiaNineTails=0
     I:EntityGaiaPropFlowerCyan=0
+    I:EntityGaiaSahuagin=0
     I:EntityGaiaSatyr=0
     I:EntityGaiaSelkie=0
     I:EntityGaiaShaman=0
@@ -58,6 +59,7 @@ general {
     I:EntityLilyLurker=0
     I:EntityLostMiner=0
     I:EntityMinecartChest=0
+    I:EntityMorphAcquisition=0
     I:EntityMotherSpider=0
     I:EntityPig=0
     I:EntityRocketCreeper=0
@@ -75,9 +77,8 @@ general {
     I:EntityVillager=0
     I:EntityWitch=0
     I:EntityWolf=0
+    I:EntityXPOrb=0
     I:EntityZombie=0
-
-    # Update Interval time for all Entities in milliseconds. The lower the better and costlier.
     I:"update Interval"=1000
 }
 
