--- a/data/config/AS_MultiMine.cfg
+++ b/data/config/AS_MultiMine.cfg
@@ -1,12 +1,155 @@
 # Configuration file
 
 bannedblocks {
+    B:"ComputerCraft:CC-Turtle-0"=false
+    B:"IC2:blockOreTin-0"=false
+    B:"TConstruct:SearedBrick-5"=false
+    B:"ThermalExpansion:Strongbox-1"=false
+    B:"ThermalFoundation:Ore-0"=false
+    B:"ThermalFoundation:Ore-2"=false
+    B:"ThermalFoundation:Ore-3"=false
+    B:"TwilightForest:tile.GiantCobble-0"=false
+    B:"TwilightForest:tile.GiantObsidian-0"=false
+    B:"TwilightForest:tile.TFUncraftingTable-0"=false
+    B:"appliedenergistics2:tile.OreQuartzCharged-0"=false
+    B:"minecraft:air-0"=false
+    B:"minecraft:chest-3"=false
+    B:"minecraft:coal_ore-0"=false
+    B:"minecraft:dirt-0"=false
     B:"minecraft:grass-0"=false
+    B:"minecraft:gravel-0"=false
+    B:"minecraft:iron_ore-0"=false
+    B:"minecraft:leaves-0"=false
+    B:"minecraft:leaves-8"=false
+    B:"minecraft:lit_redstone_ore-0"=false
+    B:"minecraft:log-0"=false
+    B:"minecraft:sand-0"=false
+    B:"minecraft:sandstone-0"=false
+    B:"minecraft:stone-0"=false
 }
 
 
 banneditems {
     B:"GraviSuite:vajra-0"=false
+    B:"PortalGun:PortalGunBlue-0"=false
+    B:"TwilightForest:item.giantPick-0"=false
+    B:"TwilightForest:item.giantPick-1"=false
+    B:"TwilightForest:item.giantPick-10"=false
+    B:"TwilightForest:item.giantPick-109"=false
+    B:"TwilightForest:item.giantPick-11"=false
+    B:"TwilightForest:item.giantPick-113"=false
+    B:"TwilightForest:item.giantPick-12"=false
+    B:"TwilightForest:item.giantPick-121"=false
+    B:"TwilightForest:item.giantPick-124"=false
+    B:"TwilightForest:item.giantPick-127"=false
+    B:"TwilightForest:item.giantPick-128"=false
+    B:"TwilightForest:item.giantPick-129"=false
+    B:"TwilightForest:item.giantPick-13"=false
+    B:"TwilightForest:item.giantPick-130"=false
+    B:"TwilightForest:item.giantPick-131"=false
+    B:"TwilightForest:item.giantPick-132"=false
+    B:"TwilightForest:item.giantPick-146"=false
+    B:"TwilightForest:item.giantPick-147"=false
+    B:"TwilightForest:item.giantPick-156"=false
+    B:"TwilightForest:item.giantPick-157"=false
+    B:"TwilightForest:item.giantPick-158"=false
+    B:"TwilightForest:item.giantPick-159"=false
+    B:"TwilightForest:item.giantPick-160"=false
+    B:"TwilightForest:item.giantPick-161"=false
+    B:"TwilightForest:item.giantPick-162"=false
+    B:"TwilightForest:item.giantPick-163"=false
+    B:"TwilightForest:item.giantPick-171"=false
+    B:"TwilightForest:item.giantPick-175"=false
+    B:"TwilightForest:item.giantPick-183"=false
+    B:"TwilightForest:item.giantPick-185"=false
+    B:"TwilightForest:item.giantPick-187"=false
+    B:"TwilightForest:item.giantPick-217"=false
+    B:"TwilightForest:item.giantPick-233"=false
+    B:"TwilightForest:item.giantPick-234"=false
+    B:"TwilightForest:item.giantPick-247"=false
+    B:"TwilightForest:item.giantPick-248"=false
+    B:"TwilightForest:item.giantPick-272"=false
+    B:"TwilightForest:item.giantPick-274"=false
+    B:"TwilightForest:item.giantPick-294"=false
+    B:"TwilightForest:item.giantPick-310"=false
+    B:"TwilightForest:item.giantPick-326"=false
+    B:"TwilightForest:item.giantPick-33"=false
+    B:"TwilightForest:item.giantPick-331"=false
+    B:"TwilightForest:item.giantPick-356"=false
+    B:"TwilightForest:item.giantPick-367"=false
+    B:"TwilightForest:item.giantPick-368"=false
+    B:"TwilightForest:item.giantPick-369"=false
+    B:"TwilightForest:item.giantPick-370"=false
+    B:"TwilightForest:item.giantPick-371"=false
+    B:"TwilightForest:item.giantPick-372"=false
+    B:"TwilightForest:item.giantPick-373"=false
+    B:"TwilightForest:item.giantPick-383"=false
+    B:"TwilightForest:item.giantPick-4"=false
+    B:"TwilightForest:item.giantPick-408"=false
+    B:"TwilightForest:item.giantPick-412"=false
+    B:"TwilightForest:item.giantPick-418"=false
+    B:"TwilightForest:item.giantPick-43"=false
+    B:"TwilightForest:item.giantPick-432"=false
+    B:"TwilightForest:item.giantPick-44"=false
+    B:"TwilightForest:item.giantPick-443"=false
+    B:"TwilightForest:item.giantPick-458"=false
+    B:"TwilightForest:item.giantPick-476"=false
+    B:"TwilightForest:item.giantPick-49"=false
+    B:"TwilightForest:item.giantPick-493"=false
+    B:"TwilightForest:item.giantPick-499"=false
+    B:"TwilightForest:item.giantPick-5"=false
+    B:"TwilightForest:item.giantPick-522"=false
+    B:"TwilightForest:item.giantPick-532"=false
+    B:"TwilightForest:item.giantPick-555"=false
+    B:"TwilightForest:item.giantPick-557"=false
+    B:"TwilightForest:item.giantPick-57"=false
+    B:"TwilightForest:item.giantPick-586"=false
+    B:"TwilightForest:item.giantPick-596"=false
+    B:"TwilightForest:item.giantPick-6"=false
+    B:"TwilightForest:item.giantPick-60"=false
+    B:"TwilightForest:item.giantPick-614"=false
+    B:"TwilightForest:item.giantPick-617"=false
+    B:"TwilightForest:item.giantPick-64"=false
+    B:"TwilightForest:item.giantPick-646"=false
+    B:"TwilightForest:item.giantPick-657"=false
+    B:"TwilightForest:item.giantPick-676"=false
+    B:"TwilightForest:item.giantPick-679"=false
+    B:"TwilightForest:item.giantPick-689"=false
+    B:"TwilightForest:item.giantPick-7"=false
+    B:"TwilightForest:item.giantPick-71"=false
+    B:"TwilightForest:item.giantPick-712"=false
+    B:"TwilightForest:item.giantPick-73"=false
+    B:"TwilightForest:item.giantPick-735"=false
+    B:"TwilightForest:item.giantPick-74"=false
+    B:"TwilightForest:item.giantPick-740"=false
+    B:"TwilightForest:item.giantPick-743"=false
+    B:"TwilightForest:item.giantPick-744"=false
+    B:"TwilightForest:item.giantPick-749"=false
+    B:"TwilightForest:item.giantPick-798"=false
+    B:"TwilightForest:item.giantPick-804"=false
+    B:"TwilightForest:item.giantPick-805"=false
+    B:"TwilightForest:item.giantPick-811"=false
+    B:"TwilightForest:item.giantPick-84"=false
+    B:"TwilightForest:item.giantPick-85"=false
+    B:"TwilightForest:item.giantPick-855"=false
+    B:"TwilightForest:item.giantPick-864"=false
+    B:"TwilightForest:item.giantPick-866"=false
+    B:"TwilightForest:item.giantPick-873"=false
+    B:"TwilightForest:item.giantPick-911"=false
+    B:"TwilightForest:item.giantPick-925"=false
+    B:"TwilightForest:item.giantPick-928"=false
+    B:"TwilightForest:item.giantPick-933"=false
+    B:"TwilightForest:item.giantPick-975"=false
+    B:"TwilightForest:item.giantPick-981"=false
+    B:"TwilightForest:item.giantPick-988"=false
+    B:"TwilightForest:item.giantPick-991"=false
+    B:"TwilightForest:tile.GiantLeaves-0"=false
+    B:"TwilightForest:tile.TFShield-0"=false
+    B:"appliedenergistics2:item.ItemMultiMaterial-47"=false
+    B:"appliedenergistics2:item.ToolMassCannon-0"=false
+    B:"minecraft:diamond_pickaxe-0"=false
+    B:"minecraft:log-2"=false
+    B:"primitivemobs:primitivemobs_Spawner-4"=false
 }
 
 
