--- a/data/config/aobd.cfg
+++ b/data/config/aobd.cfg
@@ -1,5 +1,92 @@
 # Configuration file
 
+Aluminium {
+    B:"Disable All"=false
+    B:Eln=true
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
+    B:TConstruct=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:UltraTech=true
+    B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
+    S:colour=0xaaaaaa
+    D:energy=1.0
+    S:extra=Tin
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+    B:simpleoregrinder=true
+}
+
+
+Ardite {
+    B:"Disable All"=false
+    B:Eln=true
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
+    B:TConstruct=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:UltraTech=true
+    B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
+    S:colour=0xad3900
+    D:energy=3.0
+    S:extra=Gold
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+    B:simpleoregrinder=true
+}
+
+
+Cobalt {
+    B:"Disable All"=false
+    B:Eln=true
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
+    B:TConstruct=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:UltraTech=true
+    B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
+    S:colour=0x134d9b
+    D:energy=3.0
+    S:extra=Iron
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+    B:simpleoregrinder=true
+}
+
+
 Copper {
     B:"Disable All"=false
     B:Eln=true
@@ -260,6 +347,35 @@ Silver {
     S:colour=0xd3dadb
     D:energy=1.0
     S:extra=Lead
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+    B:simpleoregrinder=true
+}
+
+
+Steel {
+    B:"Disable All"=false
+    B:Eln=true
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
+    B:TConstruct=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:UltraTech=true
+    B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
+    S:colour=0x65686b
+    D:energy=2.0
+    S:extra=Steel
     B:factorization=true
     B:ganysnether=true
     B:modularsystems=true
