--- a/data/config/cofh/thermalexpansion/florbs.cfg
+++ b/data/config/cofh/thermalexpansion/florbs.cfg
@@ -7,13 +7,27 @@ General {
 
 
 Whitelist {
+    B:aluminiumbrass.molten=true
+    B:aluminum.molten=true
+    B:alumite.molten=true
+    B:ardite.molten=true
     B:biofuel=true
+    B:blood=true
+    B:bronze.molten=true
     B:chocolatemilk=true
     B:coal=true
+    B:cobalt.molten=true
+    B:copper.molten=true
     B:cryotheum=true
+    B:electrum.molten=true
+    B:emerald.liquid=true
     B:ender=true
+    B:enderium.molten=true
     B:fuel=true
+    B:glass.molten=true
     B:glowstone=true
+    B:glue=true
+    B:gold.molten=true
     B:ic2biogas=true
     B:ic2biomass=true
     B:ic2constructionfoam=true
@@ -24,20 +38,38 @@ Whitelist {
     B:ic2steam=true
     B:ic2superheatedsteam=true
     B:ic2uumatter=true
+    B:invar.molten=true
+    B:iron.molten=true
     B:lava=true
+    B:lead.molten=true
+    B:lumium.molten=true
     B:mana=true
+    B:manyullyn.molten=true
     B:meat=true
     B:milk=true
+    B:mithril.molten=true
     B:mobessence=true
     B:mushroomsoup=true
+    B:nickel.molten=true
+    B:obsidian.molten=true
     B:oil=true
+    B:pigiron.molten=true
     B:pinkslime=true
+    B:platinum.molten=true
     B:pyrotheum=true
+    B:redmetal.molten=true
     B:redplasma=true
     B:redstone=true
+    B:redstone.molten=true
     B:sewage=true
+    B:signalum.molten=true
+    B:silver.molten=true
+    B:slime.blue=true
     B:sludge=true
     B:steam=true
+    B:steel.molten=true
+    B:stone.seared=true
+    B:tin.molten=true
     B:water=true
 }
 
