--- a/data/config/DynamicLights_entityClasses.cfg
+++ b/data/config/DynamicLights_entityClasses.cfg
@@ -6,14 +6,17 @@ general {
     I:EntityBat=0
     I:EntityBlizz=0
     I:EntityBrainSlime=0
+    I:EntityBullet=0
     I:EntityCaveSpider=0
     I:EntityChameleon=0
+    I:EntityChargedQuartz=0
     I:EntityChicken=0
     I:EntityClientPlayerMP=0
     I:EntityCow=0
     I:EntityCreeper=0
     I:EntityDEnchantedBook=0
     I:EntityDMimic=0
+    I:EntityDMinion=0
     I:EntityDSkeletonWarrior=0
     I:EntityDSummoner=0
     I:EntityEnderman=0
@@ -46,6 +49,7 @@ general {
     I:EntityGaiaSatyr=0
     I:EntityGaiaSelkie=0
     I:EntityGaiaShaman=0
+    I:EntityGaiaSharko=0
     I:EntityGaiaSiren=0
     I:EntityGaiaSpriggan=0
     I:EntityGaiaValkyrie=0
@@ -58,22 +62,31 @@ general {
     I:EntityLily=0
     I:EntityLilyLurker=0
     I:EntityLostMiner=0
+    I:EntityMagmaCube=0
     I:EntityMinecartChest=0
+    I:EntityMiningLaser=0
     I:EntityMorphAcquisition=0
     I:EntityMotherSpider=0
+    I:EntityNuke=0
     I:EntityPig=0
+    I:EntityPortalBall=0
     I:EntityRocketCreeper=0
     I:EntityShattered=0
     I:EntitySheep=0
+    I:EntitySingularity=0
     I:EntitySkeleton=0
     I:EntitySlime=0
     I:EntitySpider=0
     I:EntitySquid=0
     I:EntitySupportCreeper=0
+    I:EntityTFArmoredGiant=0
+    I:EntityTFGiantMiner=0
     I:EntityTFNagaSegment=0
+    I:EntityTFSquirrel=0
     I:EntityTrail=0
     I:EntityTravelingMerchant=0
     I:EntityTreasureSlime=0
+    I:EntityTurret=0
     I:EntityVillager=0
     I:EntityWitch=0
     I:EntityWolf=0
