--- a/data/config/atg/biome_modifiers.cfg
+++ b/data/config/atg/biome_modifiers.cfg
@@ -721,3 +721,14 @@ TwilightForest {
 }
 
 
+appliedenergistics2 {
+
+    "Storage Cell" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+}
+
+
