--- a/data/config/AS_MultiMine.cfg
+++ b/data/config/AS_MultiMine.cfg
@@ -3,6 +3,7 @@
 bannedblocks {
     B:"ComputerCraft:CC-Turtle-0"=false
     B:"IC2:blockOreTin-0"=false
+    B:"Natura:Cloud-0"=false
     B:"TConstruct:SearedBrick-5"=false
     B:"ThermalExpansion:Strongbox-1"=false
     B:"ThermalFoundation:Ore-0"=false
@@ -25,12 +26,14 @@ bannedblocks {
     B:"minecraft:log-0"=false
     B:"minecraft:sand-0"=false
     B:"minecraft:sandstone-0"=false
+    B:"minecraft:snow_layer-0"=false
     B:"minecraft:stone-0"=false
 }
 
 
 banneditems {
     B:"GraviSuite:vajra-0"=false
+    B:"Natura:redwood-0"=false
     B:"PortalGun:PortalGunBlue-0"=false
     B:"TwilightForest:item.giantPick-0"=false
     B:"TwilightForest:item.giantPick-1"=false
@@ -145,6 +148,7 @@ banneditems {
     B:"TwilightForest:item.giantPick-991"=false
     B:"TwilightForest:tile.GiantLeaves-0"=false
     B:"TwilightForest:tile.TFShield-0"=false
+    B:"TwilightForest:tile.TFShield-4"=false
     B:"appliedenergistics2:item.ItemMultiMaterial-47"=false
     B:"appliedenergistics2:item.ToolMassCannon-0"=false
     B:"minecraft:diamond_pickaxe-0"=false
