--- a/data/config/DynamicLights_entityClasses.cfg
+++ b/data/config/DynamicLights_entityClasses.cfg
@@ -1,10 +1,12 @@
 # Configuration file
 
 general {
+    I:BlueSlime=0
     I:EntityArrow=0
     I:EntityBabySpider=0
     I:EntityBat=0
     I:EntityBlizz=0
+    I:EntityBlizzBall=0
     I:EntityBrainSlime=0
     I:EntityBullet=0
     I:EntityCaveSpider=0
@@ -32,12 +34,14 @@ general {
     I:EntityGaiaCyclops=0
     I:EntityGaiaDryad=0
     I:EntityGaiaDullahan=0
+    I:EntityGaiaEnderDragonGirl=0
     I:EntityGaiaEnderEye=0
     I:EntityGaiaFleshLich=0
     I:EntityGaiaFutakuchiOnna=0
     I:EntityGaiaGryphon=0
     I:EntityGaiaHarpy=0
     I:EntityGaiaJorogumo=0
+    I:EntityGaiaMandragora=0
     I:EntityGaiaMermaid=0
     I:EntityGaiaMimic=0
     I:EntityGaiaMinotaur=0
@@ -51,6 +55,7 @@ general {
     I:EntityGaiaShaman=0
     I:EntityGaiaSharko=0
     I:EntityGaiaSiren=0
+    I:EntityGaiaSphinx=0
     I:EntityGaiaSpriggan=0
     I:EntityGaiaValkyrie=0
     I:EntityGaiaWerecat=0
@@ -58,6 +63,7 @@ general {
     I:EntityGaiaYukiOnna=0
     I:EntityHauntedTool=0
     I:EntityHorse=0
+    I:EntityIronGolem=0
     I:EntityItem=0
     I:EntityLily=0
     I:EntityLilyLurker=0
@@ -67,12 +73,15 @@ general {
     I:EntityMiningLaser=0
     I:EntityMorphAcquisition=0
     I:EntityMotherSpider=0
+    I:EntityNeedle=0
     I:EntityNuke=0
+    I:EntityParachute=0
     I:EntityPig=0
     I:EntityPortalBall=0
     I:EntityRocketCreeper=0
     I:EntityShattered=0
     I:EntitySheep=0
+    I:EntityShip=0
     I:EntitySingularity=0
     I:EntitySkeleton=0
     I:EntitySlime=0
