--- a/data/config/DynamicLights_entityClasses.cfg
+++ b/data/config/DynamicLights_entityClasses.cfg
@@ -101,6 +101,8 @@ general {
     I:EntityWolf=0
     I:EntityXPOrb=0
     I:EntityZombie=0
+
+    # Update Interval time for all Entities in milliseconds. The lower the better and costlier.
     I:"update Interval"=1000
 }
 
